--- a/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
@@ -77,6 +77,9 @@
                                 <span class="hidden-xs">@Core.Erp.Web.Helps.SessionFixed.IdUsuario</span>
                             </a>
                         </li>
+                        <li>
+                            <a @*class="btn btn-default"*@ href="@Url.Action("Login","Account",new { Area = "" },null)">Salir</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
