--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
@@ -95,6 +95,9 @@
                                 <span class="hidden-xs">@Session["IdUsuario"]</span>
                             </a>
                         </li>
+                        <li>
+                            <a @*class="btn btn-default"*@ href="@Url.Action("Login","Account",new { Area = "" },null)">Salir</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
