--- a/ERP/Core.Erp.Web/Views/Account/LoginEmpresa.cshtml
+++ b/ERP/Core.Erp.Web/Views/Account/LoginEmpresa.cshtml
@@ -39,7 +39,7 @@
             </div>
             <!-- /.login-logo -->
             <div class="login-box-body">
-                <p class="login-box-msg">Seleccione la empresa en la que desea trabajar</p>
+                <p class="login-box-msg">Seleccione la sucursal en la que desea trabajar</p>
 
                 <div class="form-group has-feedback">
                     @Html.TextBoxFor(q => q.IdUsuario, new { @class = "form-control", @placeholder = "Usuario", @readonly = "readonly"})
@@ -47,7 +47,8 @@
                 </div>
                 
                 <div class="form-group has-feedback">
-                    @Html.DropDownListFor(q=> q.IdEmpresa,new SelectList(ViewBag.lst_empresas,"IdEmpresa", "em_nombre"),new { @class = "form-control"})
+                    @Html.HiddenFor(q=>q.IdEmpresa)
+                    @Html.DropDownListFor(q=> q.IdEmpresa,new SelectList(ViewBag.lst_empresas,"IdEmpresa", "em_nombre"),new { @class = "form-control", @disabled = "disabled"})
                 </div>
 
                 <div class="form-group has-feedback">
