--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
@@ -24,6 +24,7 @@
         $("#cr_TotalCobro").change(function () {
             CalcularSaldo();
         });
+        SetCobroTipo();
     })
 
     function SetCobroTipo() {
