--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Nuevo.cshtml
@@ -174,7 +174,7 @@
                     <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="IdPais_origen">País destino</label>
+                                <label for="IdPais_origen">País origen</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdPais_origen, settings =>
                                {
                                    settings.Name = "IdPais_origen";
