--- a/ERP/Core.Erp.Web/Areas/General/Views/Imagenes/Imagenes.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Imagenes/Imagenes.cshtml
@@ -27,7 +27,8 @@
 </script>
 <div id="externalDropZone" class="dropZoneExternal">
     <div id="dragZone">
-        <span class="dragZoneText">Drag an image here</span>
+        <span class="dragZoneText">Inserte una imagen aqui
+        </span>
     </div>
     <img id="uploadedImage" src="#" alt="" style="display: none" onload="onImageLoad()" />
     <div id="dropZone" style="display: none">
@@ -43,7 +44,6 @@
     settings.Name = "ucDragAndDrop";
     settings.UploadMode = UploadControlUploadMode.Auto;
     settings.AutoStartUpload = true;
-    settings.Width = 100;
     settings.DialogTriggerID = "externalDropZone";
     settings.AdvancedModeSettings.EnableDragAndDrop = true;
     settings.AdvancedModeSettings.EnableFileList = false;
@@ -59,5 +59,6 @@
     settings.ClientSideEvents.DropZoneEnter = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', true); }";
     settings.ClientSideEvents.DropZoneLeave = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', false); }";
     settings.ClientSideEvents.FileUploadComplete = "onUploadControlFileUploadComplete";
+    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 }).GetHtml()
 }
